# shivambhardwaj.com

./: .codecov.yml  .env.example  .eslintignore  .eslintrc.json  .firebaserc  .gitignore  ADVANCED_ROBOTS_README.md  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  CONTENT_SYSTEM.md  CONTRIBUTING.md  Cargo.toml  DEPLOY-MANUAL.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-SCRIPTS.md  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  Deploy)  Dockerfile  FEATURE_MAINTENANCE_RULES.md  FULLSTACK_TRANSFORMATION.md  GITHUB_TOKEN_INFO.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Leptos.toml  PORTFOLIO_ARCHITECTURE.md  PORTFOLIO_ROADMAP.md  PRE_DEPLOYMENT_CHECKLIST.md  QUICK_START.md  README.md  STYLEGUIDE.md  TERMINAL_PROMPTS_V2.md  TESTING_AGENTS_SUMMARY.md  TODO.md  TRANSFORMATION_STATUS.md  VISUAL_TESTING_IMPLEMENTATION.md  WORKFLOW.md  WORKFLOW_SETUP.md  (+40 more)
.claude/: settings.local.json
.claude-ai-cache/: context.json
.firebase/: hosting.b3V0.cache
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml  lighthouse.yml  test-automation.yml
.obsidian/: workspace.json
.storybook/: main.ts  preview.ts
app/: Cargo.toml
app/src/: lib.rs  server_functions.rs
app/src/components/: canvas.rs  mod.rs  quarter.rs  timeline.rs
content/blog/: docker-first-development.md  mastering-git-worktrees.md
content/experiments/: docker-worktree-integration.md
content/learning/: docker-basics.md
deployment-logs/: prod-1756507740481-report.json  prod-1756508156774-report.json  prod-1756508179749-report.json  prod-1756509668778-report.json  prod-1756509727035-report.json  prod-1756509785158-report.json  prod-1756512413369-report.json  prod-1756513473237-report.json
docs/: 00Tree.html  AGENT_USAGE_GUIDE.md  API.md  ARCHITECTURE.md  COMPONENTS.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  MASTER_GUIDE.md  README.md  SECURITY_CHECKLIST.md  TESTING.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  codebase_summary.md  features.md  getting-started.md  index.html  index.md
docs/agent-prompts/: MAJOR_CHANGES_WORKFLOW.md  MINOR_CHANGES_WORKFLOW.md  specialized-agents.md
docs/architecture/: ARCHITECTURE.md  COMPONENT_SYSTEM.md  FEATURE_FLAGS.md  MIGRATION_GUIDE.md  ROBOTICS_GUIDE.md
docs/audits/: AUDIT_REPORT.md
docs/components/: README.md
docs/design/: ANIMATIONS.md  INSPIRATION.md  PATTERNS.md  PRINCIPLES.md
docs/development/: setup.md
docs/issues/: 0001-simplify-github-actions.md
docs/robotics/: algorithms.md  swarm-intelligence.md
frontend/: Cargo.toml
frontend/src/: lib.rs
playwright-report/: index.html
public/: robots.txt  swarm-physics-worker.js  test-viewer.html
public/data/: version.json
public/hero-images/: README.md
robotics_lib/: Cargo.toml
robotics_lib/src/: boids.rs  boids_tests.rs  dstar.rs  dstar_tests.rs  ekf.rs  ekf_tests.rs  integration_tests.rs  lib.rs  math.rs  math_tests.rs  physics.rs  physics_tests.rs  spatial.rs  spatial_tests.rs
scripts/: claude-helper.js  coverage-report.js  create-issue.js  debug-jest.js  debug-vitest.mjs  deploy-firebase.js  deploy-quick.js  deploy.js  fix-tests.js  generate-version.js  manage-app.mjs  master-agent.js  master-controller.js  production-deploy.js  quality-check-agent.js  run-build-agent.js  run-comprehensive-tests.js  run-dark-mode-agent.js  run-deploy-agent.js  run-pre-push-agent.js  run-qa-agent.js  run-validation-fix-agent.js  run-visual-tests.sh  security-scan.js  summarize-vitest-results.js  test-logger.js  test-runner.js  verify-tests.js
scripts/context-agent/: README.md  cli.js  index.js  package.json  terminal-wrapper.js
scripts/deployment/: auto-deploy.js  deploy-gcp.sh  deploy-production.cjs  deploy-production.js  deploy-staging.cjs  deploy-staging.js  error-handler.js  fix-line-endings.js  rollback.js  rollback.sh
scripts/infrastructure/: gcloud-setup.cjs  health-check.sh  init-project.sh  setup-custom-domain.bat  setup-custom-domain.sh
server/: Cargo.toml
server/src/: main.rs
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AdvancedRobots.tsx  AdvancedSwarmCanvas.tsx  BackgroundSwarm.tsx  BackgroundSwarmCanvas.tsx  CleanRobots.tsx  DeploymentDashboard.tsx  ExperienceCard.tsx  ExperienceTimeline.tsx  FastRobots.tsx  Footer.tsx  Hero3D.tsx  (+43 more)
stories/: Footer.stories.tsx  GitHubContributionGraph.stories.tsx  Navigation.stories.tsx  README.md  Robotics.stories.tsx  TechStack.stories.tsx
test-results/: unit-results.json
tests/: setup.ts
types/: jest-compat.d.ts  vitest-augment.d.ts
(+202 files in other folders)
