[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
robotics_lib = { path = "../robotics_lib", features = ["serde"] }
cfg-if = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }

# Optional dependencies for SSR
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
gray_matter = { workspace = true, optional = true }
pulldown-cmark = { workspace = true, optional = true }

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:gray_matter",
    "dep:pulldown-cmark",
]

[lib]
crate-type = ["cdylib", "rlib"]

