[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app", features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
simple_logger = { workspace = true }
log = { workspace = true }
robotics_lib = { path = "../robotics_lib" }
futures = { workspace = true }
